--- a/PrimeTrack-Web/tsconfig.app.json
+++ b/PrimeTrack-Web/tsconfig.app.json
@@ -30,5 +30,8 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
-}
+  "include": [
+    "src",
+    "src/types/**/*.d.ts",
+    "vite.config.ts"
+  ]}
