--- a/PrimeTrack-Web/tsconfig.node.json
+++ b/PrimeTrack-Web/tsconfig.node.json
@@ -21,5 +21,9 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["vite.config.ts"]
+  "include": [
+    "src",
+    "src/types/**/*.d.ts",
+    "vite.config.ts"
+  ]
 }
